商品一覧画面とseed用のデータを追加。

--- a/config/templates/_header.html
+++ b/config/templates/_header.html
@@ -3,7 +3,7 @@
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
             <h1 class="display-4 fw-bolder">Takimon EC</h1>
-            <p class="lead fw-normal text-white-50 mb-0">みんなの必需品をお届け</p>
+            <p class="lead fw-normal text-white-50 mb-0">みんなの必需品をお届け!</p>
         </div>
     </div>
 </header>
