--- a/config/templates/items/items_list.html
+++ b/config/templates/items/items_list.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}Takimon EC{% endblock %}
-
 {% block content %}
+{% include '_header.html' %}
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
