一覧と詳細画面からカートの追加処理を追加

--- a/config/templates/items/items_detail.html
+++ b/config/templates/items/items_detail.html
@@ -15,14 +15,17 @@
                     <span>{{ object.price }}円</span>
                 </div>
                 <p class="lead">{{ object.description }}</p>
-                <div class="d-flex">
-                    <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1"
-                        style="max-width: 3rem" />
-                    <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                        <i class="bi-cart-fill me-1"></i>
-                        Add to cart
-                    </button>
-                </div>
+                <form action="{% url 'items:detail_addcart' object.id %}" method="post">
+                    {% csrf_token %}
+                    <div class="d-flex">
+                        <input class="form-control text-center me-3" id="inputQuantity" name="quantity" type="num"
+                            value="1" style="max-width: 3rem" />
+                        <button class="btn btn-outline-dark flex-shrink-0" type="submit">
+                            <i class="bi-cart-fill me-1"></i>
+                            Add to cart
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
