--- a/config/templates/items/items_list.html
+++ b/config/templates/items/items_list.html
@@ -31,7 +31,11 @@
                         </div>
                         <!-- Product actions-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                            <div class="text-center">
+                                <form action="{% url 'items:addcart' item.id %}" method="post">
+                                    {% csrf_token %}
+                                    <button class="btn btn-outline-dark mt-auto">Add to cart</button>
+                                </form>
                             </div>
                         </div>
                     </div>
