--- a/config/templates/_navigation.html
+++ b/config/templates/_navigation.html
@@ -22,13 +22,13 @@
                     </ul>
                 </li>
             </ul>
-            <form class="d-flex">
-                <button class="btn btn-outline-dark" type="submit">
+            <div class="d-flex">
+                <a href="{% url 'checkout:checkout' %}" class="btn btn-outline-dark">
                     <i class="bi-cart-fill me-1"></i>
                     Cart
                     <span class="badge bg-dark text-white ms-1 rounded-pill">{{ cart_count }}</span>
-                </button>
-            </form>
+                </a>
+            </div>
         </div>
     </div>
 </nav>
