チェックアウト機能と購入詳細表示機能を追加

--- a/config/templates/manageapp/_navigation.html
+++ b/config/templates/manageapp/_navigation.html
@@ -9,6 +9,8 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="/manage/items/">商品管理</a>
                 </li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/manage/checkout/">購入明細</a>
+                </li>
             </ul>
         </div>
     </div>
