--- a/config/templates/manageapp/manageapp_items_create.html
+++ b/config/templates/manageapp/manageapp_items_create.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-primary">追加する</button>
+                <button type="submit" class="btn btn-primary">登録する</button>
                 <a class="btn btn-secondary" href="{% url 'manageapp:manage_items_list' %}">リストへ戻る</a>
             </div>
         </form>
