--- a/config/templates/_navigation.html
+++ b/config/templates/_navigation.html
@@ -23,7 +23,7 @@
                 </li>
             </ul>
             <div class="d-flex">
-                <a href="{% url 'checkout:checkout' %}" class="btn btn-outline-dark">
+                <a href="{% url 'checkout:checkout_create' %}" class="btn btn-outline-dark">
                     <i class="bi-cart-fill me-1"></i>
                     Cart
                     <span class="badge bg-dark text-white ms-1 rounded-pill">{{ cart_count }}</span>
