--- a/config/templates/checkout/checkout.html
+++ b/config/templates/checkout/checkout.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
-{% load static %}
-
-{% block title %}商品詳細 | 注文詳細{% endblock %}
+{% load static widget_tweaks %}
+{% block title %}注文詳細 | EC 管理サイト{% endblock %}
 
 {% block content %}
 <div class="my-5 container" style="max-width: 960px;">
@@ -44,122 +43,224 @@
                 </form>
             </div>
             <div class="col-md-7 col-lg-8">
-                <h4 class="mb-3">Billing address</h4>
-                <form class="needs-validation" novalidate>
+                <h4 class="mb-3">請求先住所</h4>
+                <form class="needs-validation" method="POST" novalidate>
+                    {% csrf_token %}
+                    {% if form.non_field_errors %}
+                    <div class="alert alert-danger" role="alert">
+                        {% for error in form.non_field_errors %}
+                        {{ error }}
+                        {% endfor %}
+                    </div>
+                    {% endif %}
                     <div class="row g-3">
-                        <div class="col-sm-6"> <label for="firstName" class="form-label">First name</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                        <div class="col-sm-6">
+                            <label for="{{ form.lastname.id_for_label }}" class="form-label">
+                                {{ form.lastname.label }}
+                            </label>
+                            {% if form.lastname.errors %}
+                            {% render_field form.lastname class="form-control is-invalid" %}
+                            {% else %}
+                            {% render_field form.lastname class+="form-control" %}
+                            {% endif %}
+
                             <div class="invalid-feedback">
-                                Valid first name is required.
+                                {% for error in form.lastname.errors %}
+                                {{ error }}
+                                {% endfor %}
                             </div>
                         </div>
-                        <div class="col-sm-6"> <label for="lastName" class="form-label">Last name</label> <input
-                                type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                        <div class="col-sm-6">
+                            <label for="{{ form.firstname.id_for_label }}" class="form-label">
+                                {{ form.firstname.label }}
+                            </label>
+                            {% if form.firstname.errors %}
+                            {% render_field form.firstname class="form-control is-invalid" %}
+                            {% else %}
+                            {% render_field form.firstname class+="form-control" %}
+                            {% endif %}
                             <div class="invalid-feedback">
-                                Valid last name is required.
+                                {% for error in form.firstname.errors %}
+                                {{ error }}
+                                {% endfor %}
                             </div>
                         </div>
-                        <div class="col-12"> <label for="username" class="form-label">Username</label>
-                            <div class="input-group has-validation"> <span class="input-group-text">@</span>
-                                <input type="text" class="form-control" id="username" placeholder="Username" required>
+                        <div class="col-12">
+                            <label for="{{ form.username.id_for_label }}" class="form-label">
+                                {{ form.username.label }}
+                            </label>
+                            <div class="input-group has-validation">
+                                <span class="input-group-text">@</span>
+                                {% if form.username.errors %}
+                                {% render_field form.username class="form-control is-invalid" placeholder="ユーザー名" %}
+                                {% else %}
+                                {% render_field form.username class+="form-control" placeholder="ユーザー名" %}
+                                {% endif %}
                                 <div class="invalid-feedback">
-                                    Your username is required.
+                                    {% for error in form.username.errors %}
+                                    {{ error }}
+                                    {% endfor %}
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12"> <label for="email" class="form-label">Email <span
-                                    class="text-body-secondary">(Optional)</span></label> <input type="email"
-                                class="form-control" id="email" placeholder="you@example.com">
+                        <div class="col-12">
+                            <label for="{{ form.username.id_for_label }}" class="form-label">
+                                {{ form.email.label }}
+                                <span class="text-body-secondary">(Optional)</span>
+                            </label>
+                            {% if form.email.errors %}
+                            {% render_field form.email class="form-control is-invalid" placeholder="sample@mail.com" %}
+                            {% else %}
+                            {% render_field form.email class+="form-control" placeholder="sample@sample.com" %}
+                            {% endif %}
                             <div class="invalid-feedback">
-                                Please enter a valid email address for shipping updates.
+                                {% for error in form.email.errors %}
+                                {{ error }}
+                                {% endfor %}
                             </div>
                         </div>
-                        <div class="col-12"> <label for="address" class="form-label">Address</label> <input type="text"
-                                class="form-control" id="address" placeholder="1234 Main St" required>
+                        <div class="col-12">
+                            <label for="{{ form.address1.id_for_label }}" class="form-label">
+                                {{ form.address1.label }}
+                            </label>
+                            {% if form.address1.errors %}
+                            {% render_field form.address1 class="form-control is-invalid" placeholder="番地、建物名、部屋番号" %}
+                            {% else %}
+                            {% render_field form.address1 class+="form-control" placeholder="番地、建物名、部屋番号" %}
+                            {% endif %}
                             <div class="invalid-feedback">
-                                Please enter your shipping address.
+                                {% for error in form.address1.errors %}
+                                {{ error }}
+                                {% endfor %}
                             </div>
                         </div>
-                        <div class="col-12"> <label for="address2" class="form-label">Address 2 <span
-                                    class="text-body-secondary">(Optional)</span></label> <input type="text"
-                                class="form-control" id="address2" placeholder="Apartment or suite"> </div>
-                        <div class="col-md-5"> <label for="country" class="form-label">Country</label> <select
-                                class="form-select" id="country" required>
-                                <option value="">Choose...</option>
-                                <option>United States</option>
-                            </select>
+                        <div class="col-12">
+                            <label for="{{ form.address2.id_for_label }}" class="form-label">
+                                {{ form.address2.label }}
+                                <span class="text-body-secondary">(Optional)</span>
+                            </label>
+                            {% if form.address2.errors %}
+                            {% render_field form.address2 class="form-control is-invalid" placeholder="集合住宅名、ビル名、階数" %}
+                            {% else %}
+                            {% render_field form.address2 class+="form-control" placeholder="集合住宅名、ビル名、階数" %}
+                            {% endif %}
                             <div class="invalid-feedback">
-                                Please select a valid country.
+                                {% for error in form.address2.errors %}
+                                {{ error }}
+                                {% endfor %}
                             </div>
                         </div>
-                        <div class="col-md-4"> <label for="state" class="form-label">State</label> <select
-                                class="form-select" id="state" required>
-                                <option value="">Choose...</option>
-                                <option>California</option>
-                            </select>
+                        <div class="col-md-5">
+                            <label for="{{ form.address2.id_for_label }}" class="form-label">
+                                {{ form.country.label }}
+                            </label>
+                            {% if form.country.errors %}
+                            {% render_field form.country class="form-select is-invalid" %}
+                            {% else %}
+                            {% render_field form.country class+="form-select" %}
+                            {% endif %}
                             <div class="invalid-feedback">
-                                Please provide a valid state.
+                                {% for error in form.country.errors %}
+                                {{ error }}
+                                {% endfor %}
                             </div>
                         </div>
-                        <div class="col-md-3"> <label for="zip" class="form-label">Zip</label> <input type="text"
-                                class="form-control" id="zip" placeholder="" required>
+                        <div class="col-md-4">
+                            <label for="{{ form.address2.id_for_label }}" class="form-label">
+                                {{ form.state.label }}
+                            </label>
+                            {% if form.state.errors %}
+                            {% render_field form.state class="form-select is-invalid" %}
+                            {% else %}
+                            {% render_field form.state class+="form-select" %}
+                            {% endif %}
                             <div class="invalid-feedback">
-                                Zip code required.
+                                {% for error in form.state.errors %}
+                                {{ error }}
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <label for="{{ form.zip.id_for_label }}" class="form-label">
+                                {{ form.zip.label }}
+                            </label>
+                            {% if form.zip.errors %}
+                            {% render_field form.zip class="form-control is-invalid" %}
+                            {% else %}
+                            {% render_field form.zip class+="form-control" %}
+                            {% endif %}
+                            <div class="invalid-feedback">
+                                {% for error in form.zip.errors %}
+                                {{ error }}
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
                     <hr class="my-4">
-                    <div class="form-check"> <input type="checkbox" class="form-check-input" id="same-address">
-                        <label class="form-check-label" for="same-address">Shipping address is the same as my
-                            billing address</label>
-                    </div>
-                    <div class="form-check"> <input type="checkbox" class="form-check-input" id="save-info">
-                        <label class="form-check-label" for="save-info">Save this information for next
-                            time</label>
-                    </div>
-                    <hr class="my-4">
-                    <h4 class="mb-3">Payment</h4>
-                    <div class="my-3">
-                        <div class="form-check"> <input id="credit" name="paymentMethod" type="radio"
-                                class="form-check-input" checked required> <label class="form-check-label"
-                                for="credit">Credit card</label> </div>
-                        <div class="form-check"> <input id="debit" name="paymentMethod" type="radio"
-                                class="form-check-input" required> <label class="form-check-label" for="debit">Debit
-                                card</label> </div>
-                        <div class="form-check"> <input id="paypal" name="paymentMethod" type="radio"
-                                class="form-check-input" required> <label class="form-check-label"
-                                for="paypal">PayPal</label> </div>
-                    </div>
+                    <h4 class="mb-3">クレジットカード情報</h4>
                     <div class="row gy-3">
-                        <div class="col-md-6"> <label for="cc-name" class="form-label">Name on card</label>
-                            <input type="text" class="form-control" id="cc-name" placeholder="" required> <small
-                                class="text-body-secondary">Full name as displayed on card</small>
+                        <div class="col-md-6">
+                            <label for="{{ form.card_name.id_for_label }}" class="form-label">
+                                {{ form.card_name.label }}
+                            </label>
+                            {% if form.card_name.errors %}
+                            {% render_field form.card_name class="form-control is-invalid" %}
+                            {% else %}
+                            {% render_field form.card_name class+="form-control" %}
+                            {% endif %}
                             <div class="invalid-feedback">
-                                Name on card is required
+                                {% for error in form.card_name.errors %}
+                                {{ error }}
+                                {% endfor %}
                             </div>
                         </div>
-                        <div class="col-md-6"> <label for="cc-number" class="form-label">Credit card
-                                number</label> <input type="text" class="form-control" id="cc-number" placeholder=""
-                                required>
+                        <div class="col-md-6">
+                            <label for="{{ form.card_number.id_for_label }}" class="form-label">
+                                {{ form.card_number.label }}
+                            </label>
+                            {% if form.card_number.errors %}
+                            {% render_field form.card_number class="form-control is-invalid" %}
+                            {% else %}
+                            {% render_field form.card_number class+="form-control" %}
+                            {% endif %}
                             <div class="invalid-feedback">
-                                Credit card number is required
+                                {% for error in form.card_number.errors %}
+                                {{ error }}
+                                {% endfor %}
                             </div>
                         </div>
-                        <div class="col-md-3"> <label for="cc-expiration" class="form-label">Expiration</label>
-                            <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
+                        <div class="col-md-3">
+                            <label for="{{ form.card_expiration.id_for_label }}" class="form-label">
+                                {{ form.card_expiration.label }}
+                            </label>
+                            {% if form.card_expiration.errors %}
+                            {% render_field form.card_expiration class="form-control is-invalid" %}
+                            {% else %}
+                            {% render_field form.card_expiration class+="form-control" %}
+                            {% endif %}
                             <div class="invalid-feedback">
-                                Expiration date required
+                                {% for error in form.card_expiration.errors %}
+                                {{ error }}
+                                {% endfor %}
                             </div>
                         </div>
-                        <div class="col-md-3"> <label for="cc-cvv" class="form-label">CVV</label> <input type="text"
-                                class="form-control" id="cc-cvv" placeholder="" required>
+                        <div class="col-md-3">
+                            <label for="{{ form.card_cvv.id_for_label }}" class="form-label">
+                                {{ form.card_cvv.label }}
+                            </label>
+                            {% if form.card_cvv.errors %}
+                            {% render_field form.card_cvv class="form-control is-invalid" %}
+                            {% else %}
+                            {% render_field form.card_cvv class+="form-control" %}
+                            {% endif %}
                             <div class="invalid-feedback">
-                                Security code required
+                                {% for error in form.card_cvv.errors %}
+                                {{ error }}
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
-                    <hr class="my-4"> <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to
-                        checkout</button>
+                    <hr class="my-4"> <button class="w-100 btn btn-primary btn-lg" type="submit">購入する</button>
                 </form>
             </div>
         </div>
