購入明細詳細のメールアドレスの頭の@を削除

--- a/config/templates/manageapp/manageapp_checkout_detail.html
+++ b/config/templates/manageapp/manageapp_checkout_detail.html
@@ -15,7 +15,7 @@
                 <strong>ユーザー名:</strong> @{{ object.username }}
             </div>
             <div class="mb-3">
-                <strong>Eメールアドレス:</strong> @{{ object.email }}
+                <strong>Eメールアドレス:</strong> {{ object.email }}
             </div>
             <div class="mb-3">
                 <strong>住所1 (番地・町):</strong> {{ object.address1 }}
