生成したプロモーション機能を各画面で使用できるように改修

--- a/config/templates/checkout/checkout.html
+++ b/config/templates/checkout/checkout.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static widget_tweaks %}
-{% block title %}注文詳細 | EC 管理サイト{% endblock %}
+{% block title %}注文画面 | EC 管理サイト{% endblock %}
 
 {% block content %}
 <div class="my-5 container" style="max-width: 960px;">
@@ -27,20 +27,32 @@
                         </div>
                     </li>
                     {% endfor %}
-                    <!-- <li class="list-group-item d-flex justify-content-between bg-body-tertiary">
+                    {% if applied_promotion_code %}
+                    <li class="list-group-item d-flex justify-content-between bg-body-tertiary">
                         <div class="text-success">
-                            <h6 class="my-0">Promo code</h6> <small>EXAMPLECODE</small>
-                        </div> <span class="text-success">−$5</span>
-                    </li> -->
-                    <li class="list-group-item d-flex justify-content-between"> <span>合計</span>
+                            <h6 class="my-0">プロモーションコード</h6>
+                            <small>{{ applied_promotion_code }}</small>
+                        </div>
+                        <span class="text-success">−{{ applied_promotion_discount_price }}円</span>
+                    </li>
+                    {% endif %}
+                    <li class="list-group-item d-flex justify-content-between">
+                        <span>合計</span>
                         <strong>{{ cart_sum_price }}円</strong>
                     </li>
                 </ul>
-                <form class="card p-2">
-                    <div class="input-group"> <input type="text" class="form-control" placeholder="Promo code">
-                        <button type="submit" class="btn btn-secondary">Redeem</button>
+                <form class="card p-2" method="post">
+                    <div class="input-group">
+                        {% csrf_token %}
+                        <input type="text" name="promotion_code" class="form-control" placeholder="プロモーションコード">
+                        <button type="submit" name="apply_promotion_code" class="btn btn-secondary">適用</button>
                     </div>
                 </form>
+                {% if promotion_code_error %}
+                <div class="alert alert-danger" role="alert">
+                    {{ promotion_code_error }}
+                </div>
+                {% endif %}
             </div>
             <div class="col-md-7 col-lg-8">
                 <h4 class="mb-3">請求先住所</h4>
@@ -260,7 +272,11 @@
                             </div>
                         </div>
                     </div>
-                    <hr class="my-4"> <button class="w-100 btn btn-primary btn-lg" type="submit">購入する</button>
+                    <hr class="my-4">
+                    {% if applied_promotion_code %}
+                    <input type="hidden" name="promotion_code" id="promotion_code" value="{{ applied_promotion_code }}">
+                    {% endif %}
+                    <button class="w-100 btn btn-primary btn-lg" type="submit">購入する</button>
                 </form>
             </div>
         </div>
