--- a/config/templates/manageapp/manageapp_checkout_detail.html
+++ b/config/templates/manageapp/manageapp_checkout_detail.html
@@ -45,7 +45,13 @@
                 <strong>カードCVV:</strong> {{ object.card_cvv }}
             </div>
             <div class="mb-3">
-                <strong>購入合計金額:</strong> {{ sum_price }}円
+                <strong>プロモーションコード:</strong> {{ object.promotion_code }}
+            </div>
+            <div class="mb-3">
+                <strong>割引額:</strong> {{ object.discount_price }}円
+            </div>
+            <div class="mb-3">
+                <strong>購入合計金額:</strong> {{ total_price }}円
             </div>
             <div class="table-responsive">
                 <table class="table align-middle mb-0 bg-white">
